# ipa_door_handle_detection

./: CMakeLists.txt  CMakeLists.txt~  READ.ME  package.xml
ipa_door_handle_detection/: CMakeLists.txt  CMakeLists.txt~
ipa_door_handle_detection/ros/include/MachineLearning/: ipa_feature_extraction.h
ipa_door_handle_detection/ros/include/TemplateMatching/: ipa_door_handle_template_alignment.h  ipa_start_detection_TM.h
ipa_door_handle_detection/ros/src/TemplateMatching/: ipa_door_handle_template_alignment.cpp  ipa_start_detection_TM.cpp
ros/include/: ipa_database_generation.h  ipa_door_handle_segmentation.h  ipa_door_handle_template_alignment.h  ipa_feature_generation.h  ipa_start_detection.h  ipa_start_detection_ML.h  ipa_template_generation.h
ros/include/MachineLearning/: ipa_feature_extraction.h  ipa_start_detection_ML.h  ipa_train_classifier.h
ros/include/TemplateMatching/: ipa_door_handle_segmentation.h  ipa_start_detection_TM.h
ros/src/: Untitled Document  ipa_database_generation.cpp  ipa_database_generation_params.cpp  ipa_database_generation_save.cpp  ipa_door_handle_detection_main.cpp  ipa_door_handle_detection_main_ML.cpp  ipa_door_handle_detection_main_TM.cpp  ipa_door_handle_segmentation.cpp  ipa_door_handle_template_alignment.cpp  ipa_feature_generation.cpp  ipa_start_detection.cpp  ipa_start_detection_ML.cpp  ipa_start_detection_TM.cpp  ipa_template_generation.cpp  ipa_train_classifier_main.cpp
ros/src/MachineLearning/: AdaBooster.cpp  info  ipa_feature_extraction.cpp  ipa_start_detection_ML.cpp  ipa_start_detection_ML.cpp~  ipa_train_classifier.cpp  ipa_train_classifier.cpp~  ipa_write_depth2file.cpp  ipa_write_depth2file.cpp~
ros/src/MachineLearning/traincascade/: BRIEFfeatures.cpp  BRIEFfeatures.cpp~  traincascade.cpp~
ros/src/TemplateMatching/: ipa_door_handle_segmentation.cpp  ipa_door_handle_template_alignment.cpp  ipa_start_detection.h  ipa_start_detection_TM.cpp  ipa_template_generation.cpp  ipa_template_generation.h
